# v3kn

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  format.bat  gen-windows.bat
.github/: format-check.sh
.github/workflows/: c-cpp.yml
v3kn/: CMakeLists.txt  main.cpp
v3kn/account/: CMakeLists.txt
v3kn/account/include/account/: account.h
v3kn/account/src/: account.cpp
v3kn/activity/: CMakeLists.txt
v3kn/activity/include/activity/: activity.h
v3kn/activity/src/: activity.cpp
v3kn/friend/: CMakeLists.txt
v3kn/friend/include/friend/: friend.h
v3kn/friend/src/: friend.cpp
v3kn/messages/: CMakeLists.txt
v3kn/messages/include/messages/: messages.h
v3kn/messages/src/: messages.cpp
v3kn/script/: update-linux.sh
v3kn/storage/: CMakeLists.txt
v3kn/storage/include/storage/: storage.h
v3kn/storage/src/: storage.cpp
v3kn/utils/: CMakeLists.txt
v3kn/utils/include/utils/: utils.h
v3kn/utils/src/: utils.cpp
v3kn/version/: CMakeLists.txt
v3kn/version/include/version/: version.h
v3kn/version/src/: version.cpp.in
